--- a/GSWExtensions.framework/French.lproj/GSWExceptionPage.gswc/GSWExceptionPage.html
+++ b/GSWExtensions.framework/French.lproj/GSWExceptionPage.gswc/GSWExceptionPage.html
@@ -22,7 +22,7 @@
                     <b>Application:</b>
                 </td>
                 <td align="left" valign="top">
-                    <gsweb name="ApplicationNameString"></gsweb>
+                    <PRE><gsweb name="ApplicationNameString"></gsweb></PRE>
                 </td>
             </tr>
             <tr>
@@ -30,7 +30,7 @@
                     <b>Erreur:</b>
                 </td>
                 <td align="left" valign="top">
-                    <gsweb name="ExceptionNameString"></gsweb>
+                    <PRE><gsweb name="ExceptionNameString"></gsweb></PRE>
                 </td>
             </tr>
             <tr>
@@ -39,7 +39,7 @@
                 </td>
                 <td align="left" valign="top">
                     <gsweb name="ReasonRepetition">
-                        <gsweb name="ReasonString"></gsweb><br>
+                        <PRE><gsweb name="ReasonString"></gsweb></PRE><br>
                     </gsweb>
                 </td>
             </tr>
@@ -53,10 +53,10 @@
                 <gsweb name="UserInfoRowRepetition">
                 <tr>
                     <td align="right" valign="top">
-                        <b><gsweb name="UserInfoKeyString"></gsweb>:</b>
+                        <b><PRE><gsweb name="UserInfoKeyString"></gsweb>:</PRE></b>
                     </td>
                     <td align="left" valign="top">
-                        <gsweb name="UserInfoValueString"></gsweb>
+                        <PRE><gsweb name="UserInfoValueString"></gsweb></PRE>
                     </td>
                 </tr>
                 </gsweb>
