2002-06-03  Manuel Guesdon <mguesdon@orange-concept.com> 	* GSWeb.framework/GSWBundle.m: 		o use smartTakeValue:forKey: instead of takeValue:forKey: 	* GSWeb.framework/GSWAssociation.m: 		o use smartTakeValue:forKeyPath: instead of takeValue:forKeyPath: 	* GSWeb.framework/GSWComponent.m: 		o use smartTakeValue:forKey: instead of takeValue:forKey: 	* GSWeb.framework/GSWDisplayGroup.m: 		o changes in -description 		o logs 	* GSWExtensions.framework/GSWExceptionPage.gswc/GSWExceptionPage.gswd: 		o added "reference" 	* GSWExtensions.framework/GSWExceptionPage.gswc/GSWExceptionPage.html: 		o added "reference" 	* GSWExtensions.framework/French.lproj/GSWExceptionPage.gswc/GSWExceptionPage.html: 		o added "reference" 	* GSWExtensions.framework/GSWExceptionPage.gswc/GSWExceptionPage.h/.m: 		o added "reference" 	* GSWExtensionsGSW.framework/GSWFileUploadComponent.h/.m: 		o bug fixes 	* GSWExtensionsGSW.framework/GSWFileUploadComponent.gswc/GSWFileUploadComponent.gswd: 		o added Height & With parameters for images 	* GSWExtensionsGSW.framework/GSWFileUploadComponent.gswc/GSWFileUploadComponent.html: 		o added delete check box title 	* GSWeb.framework/GSWElement.m: 		o logs 	* GSWeb.framework/GSWFileUpload.m: 		o logs 	* GSWeb.framework/GSWRequest.m: 		o bug fix for uploaded files
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@13762 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/GSWExceptionPage.gswc/GSWExceptionPage.html
+++ b/GSWExtensions.framework/GSWExceptionPage.gswc/GSWExceptionPage.html
@@ -26,6 +26,14 @@
                 </td>
             </tr>
             <tr>
+                <td align="right" valign="top">
+                    <b>Reference:</b>
+                </td>
+                <td align="left" valign="top">
+                    <PRE><gsweb name="ReferenceString"></gsweb></PRE>
+                </td>
+            </tr>
+            <tr>
                 <td align="RIGHT" Valign="MIDDLE">
                     <b>Error:</b>
                 </td>
