--- a/GSWExtensionsGSW.framework/GSWFileUploadComponent.gswc/GSWFileUploadComponent.html
+++ b/GSWExtensionsGSW.framework/GSWFileUploadComponent.gswc/GSWFileUploadComponent.html
@@ -16,7 +16,8 @@
       </gsweb>
     </gsweb>
   </gsweb>
+  <br>
   <gsweb name="UploadFile"></gsweb><br>
   <gsweb name="DeleteCondition">
-    <gsweb name="DeleteCheckBox"></gsweb>
+    <gsweb name="DeleteCheckBoxTitle"></gsweb><gsweb name="DeleteCheckBox"></gsweb>
   </gsweb>
