--- a/GSWExtensions.framework/French.lproj/GSWExceptionPage.gswc/GSWExceptionPage.html
+++ b/GSWExtensions.framework/French.lproj/GSWExceptionPage.gswc/GSWExceptionPage.html
@@ -27,6 +27,14 @@
             </tr>
             <tr>
                 <td align="right" valign="top">
+                    <b>Reference:</b>
+                </td>
+                <td align="left" valign="top">
+                    <PRE><gsweb name="ReferenceString"></gsweb></PRE>
+                </td>
+            </tr>
+            <tr>
+                <td align="right" valign="top">
                     <b>Erreur:</b>
                 </td>
                 <td align="left" valign="top">
