2002-10-12   Manuel Guesdon <mguesdon@orange-concept.com> 		o replaced <br> by <br/>
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@14742 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/GSWExceptionPage.gswc/GSWExceptionPage.html
+++ b/GSWExtensions.framework/GSWExceptionPage.gswc/GSWExceptionPage.html
@@ -7,15 +7,15 @@
 <table border="0">
 <tr>
 <td align="center" Valign="TOP">
-    <gsweb name="ExclamationImage"></gsweb><br>
-    Re-enter<br>
+    <gsweb name="ExclamationImage"></gsweb><br/>
+    Re-enter<br/>
     <gsweb name="ReenterHyperlink">
         <b><gsweb name="ApplicationNameString"></gsweb></b>
     </gsweb>
 </td>
 <td align="LEFT" Valign="TOP">
     <gsweb name="VisibleConditional">
-        <hr>
+        <hr/>
         <table border="0">
             <tr>
                 <td align="RIGHT" Valign="MIDDLE">
@@ -47,13 +47,13 @@
                 </td>
                 <td align="LEFT" Valign="MIDDLE">
                     <gsweb name="ReasonRepetition">
-                        <PRE><gsweb name="ReasonString"></gsweb></PRE><br>
+                        <PRE><gsweb name="ReasonString"></gsweb></PRE><br/>
                     </gsweb>
                 </td>
             </tr>
             <tr>
-                <TD colspan="2" align="LEFT" Valign="bottom">
-                    <hr>
+                <td colspan="2" align="LEFT" Valign="bottom">
+                    <hr/>
                     <b>User Info Dictionary:</b>
                 </td>
             </tr>
