2002-10-12   Manuel Guesdon <mguesdon@orange-concept.com> o replaced <br> by <br/>
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@14743 72102866-910b-0410-8b05-ffd578937521

--- a/GSWExtensions.framework/GSWSessionCreationErrorPage.gswc/GSWSessionCreationErrorPage.html
+++ b/GSWExtensions.framework/GSWSessionCreationErrorPage.gswc/GSWSessionCreationErrorPage.html
@@ -7,8 +7,8 @@
 <table border="0" width="100%">
 <tr>
     <td align="CENTER" Valign="TOP">
-        <gsweb name="ExclamationImage"></gsweb><br>
-        Re-enter<br>
+        <gsweb name="ExclamationImage"></gsweb><br/>
+        Re-enter<br/>
         <gsweb name="ReenterHyperlink">
             <b><gsweb name="ApplicationNameString"></gsweb></b>
         </gsweb>
