--- a/GSWExtensions.framework/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
+++ b/GSWExtensions.framework/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.html
@@ -7,8 +7,8 @@
 <table border="0" width="100%">
 <tr>
     <td align="CENTER" Valign="TOP">
-        <gsweb name="ExclamationImage"></gsweb><br>
-        Re-enter<br>
+        <gsweb name="ExclamationImage"></gsweb><br/>
+        Re-enter<br/>
         <gsweb name="ReenterHyperlink">
             <b><gsweb name="ApplicationNameString"></gsweb></b>
         </gsweb>
